--- a/html/index.html
+++ b/html/index.html
@@ -1066,7 +1066,7 @@
   <!--  -->
  
   <!-- --------------FOOTER------------------------- -->
-  <footer class="bg-gray-50">
+  <footer class="bg-gray- pt-10">
     <div class="container mx-auto px-6 pt-6   md:px-12 xl:px-20 grid gap-y-8 gap-x-12  py-10 md:grid-cols-2 xl:grid-cols-3  ">
       <div class="max-w-sm">
         <div class="mb-6 flex h-12 items-center space-x-2">
