--- a/html/enseignement/deliberation.html
+++ b/html/enseignement/deliberation.html
@@ -13,7 +13,7 @@
 
   <!-- MENU -->
   <div class="relative">
-    <img src="/images/extra-images/banner-01.jpg" class="absolute inset-0 h-full w-full object-cover" alt="" />
+    <img src="/images/extra-images/banner-03.jpg" class="absolute inset-0 h-full w-full object-cover" alt="" />
     <div class="relative bg-slate-950 bg-opacity-80">
 
 
@@ -21,7 +21,7 @@
       <nav class=" container mx-auto px-6  text-white mb-10 md:px-12 xl:px-20">
         <div class="  flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="../book3.png" class="h-10  w-10" alt="Flowbite Logo" />
+            <img src="/images/ISTM.png" class="h-20  w-14" alt="Flowbite Logo" />
             <span class="self-center text-xl text-yellow-400 font-bold whitespace-nowrap dark:text-white">UNIV
                 CAMP</span>
         </a>
@@ -175,10 +175,7 @@
                 </div>
               </li>
 
-              <li>
-                <a href="#" class="block py-2 px-3  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent capitalize">se connecter</a>
-              </li>
-
+              
             </ul>
           </div>
         </div>
