--- a/html/inscription/inscription.html
+++ b/html/inscription/inscription.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Univ</title>
+  <title>Univ camp</title>
   <link rel="stylesheet" href="blog.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css" rel="stylesheet" />
+  <link rel="icon" type="image/svg+xml" href="/html/istm.png"/>
+
 
 </head>
 
@@ -14,7 +16,7 @@
 
   <!-- MENU -->
   <div class="relative">
-    <img src="../images/extra-images/banner-01.jpg" class="absolute inset-0 h-full w-full object-cover" alt="" />
+    <img src="/images/extra-images/banner-03.jpg" class="absolute inset-0 h-full w-full object-cover" alt="" />
     <div class="relative bg-slate-950 bg-opacity-80">
 
 
@@ -22,7 +24,7 @@
       <nav class=" container mx-auto px-6  text-white mb-10 md:px-12 xl:px-20">
         <div class="  flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="../images/chapeau.png" class="h-24 w-24" alt="Flowbite Logo" />
+            <img src="/images/istm.png" class="h-20 w-14" alt="univcamp" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Camp Univ</span>
           </a>
           <button data-collapse-toggle="navbar-dropdown" type="button"
@@ -179,11 +181,7 @@
                 </div>
               </li>
 
-              <li>
-                <a href="#"
-                  class="block py-2 px-3  rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent capitalize">se
-                  connecter</a>
-              </li>
+              
 
             </ul>
           </div>
@@ -232,7 +230,7 @@
 
   <section class="container mx-auto px-6 pt-6 mb-10 md:px-12 xl:px-20 text-gray-600 body-font">
 
-    <p class="py-4 text-3xl text-center capitalize">comment s'inscrire</p>
+    <p class="py-4 text-3xl text-center font-bold capitalize">comment s'inscrire</p>
     <div class="container px-5 py-24 mx-auto flex flex-wrap">
       <div class="flex flex-wrap w-full">
 
@@ -331,7 +329,7 @@
 
 
         <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12"
-          src="../images/extra-images/aboute.jpg" alt="step">
+          src="/images/extra-images/aboute.jpg" alt="step">
       </div>
     </div>
   </section>
