--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
                 <!-- Dropdown menu -->
                 <div id="dropdownNavba"
                   class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-                  <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
+                  <ul class="py-2 text-sm text-gray-950 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                     <li>
                       <a href="recherche/travail.html"
                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Travail
@@ -90,8 +90,8 @@
                 </button>
                 <!-- Dropdown menu -->
                 <div id="dropdownNavbar"
-                  class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-                  <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
+                  class="z-10 hidden font-normal bg-white text-gray-950 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                  <ul class="py-2 text-sm text-gray-950  " aria-labelledby="dropdownLargeButton">
                     <li>
                       <a href="news/actualite.html"
                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white capitalize">actualités</a>
@@ -120,7 +120,7 @@
                 </button>
                 <!-- Dropdown menu -->
                 <div id="dropdownNavb"
-                  class="z-10 hidden   text-white font-bold divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                  class="z-10 hidden bg-white  text-gray-950 font-bold divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                   <ul class="py-2 text-sm   dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                     <li>
                       <a href="enseignement/deliberation.html"
@@ -158,7 +158,7 @@
                 </button>
                 <!-- Dropdown menu -->
                 <div id="universite"
-                  class="z-10 hidden font-normal  text-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                  class="z-10 hidden font-normal bg-white  text-gray-950 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                   <ul class="py-2 text-sm text-bold   dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                     <li>
                       <a href="universite/about.html"
