--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
   <!-- MENU -->
 
   <div class="relative">
-    <img src="/images/extra-images/banner-03.jpg" class="absolute inset-0 h-full w-full object-cover" alt="" />
+    <img src="banner-03.jpg" class="absolute inset-0 h-full w-full object-cover" alt="" />
 
 
     <div class="relative bg-gray-950 bg-opacity-80  border-b shadow-teal-900 shadow-md ">
