--- a/html/index.html
+++ b/html/index.html
@@ -606,7 +606,7 @@
     <div class=" px-10 grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-2 gap-5">
 
         <div class="relative w-full flex items-end justify-start text-left bg-cover bg-center"
-            style="height: 450px; background-image:url(/images/1692100157119.jpeg);">
+            style="height: 450px; background-image:url(images/1692100157119.jpeg);">
             <div class="absolute top-0 mt-20 right-0 bottom-0 left-0 bg-gradient-to-b from-transparent to-gray-900">
             </div>
             <div class="absolute top-0 right-0 left-0 mx-5 mt-2 flex justify-between items-center">
@@ -625,7 +625,7 @@
         </div>
 
         <div class="relative w-full flex items-end justify-start text-left bg-cover bg-center"
-            style="height: 450px; background-image:url(/images/1692100157119.jpeg);">
+            style="height: 450px; background-image:url(images/1692100157119.jpeg);">
             <div class="absolute top-0 mt-20 right-0 bottom-0 left-0 bg-gradient-to-b from-transparent to-gray-900">
             </div>
             <div class="absolute top-0 right-0 left-0 mx-5 mt-2 flex justify-between items-center">
@@ -644,7 +644,7 @@
         </div>
 
         <div class="relative w-full flex items-end justify-start text-left bg-cover bg-center"
-            style="height: 450px; background-image:url(/images/1692100157119.jpeg);">
+            style="height: 450px; background-image:url(images/1692100157119.jpeg);">
             <div class="absolute top-0 mt-20 right-0 bottom-0 left-0 bg-gradient-to-b from-transparent to-gray-900">
             </div>
             <div class="absolute top-0 right-0 left-0 mx-5 mt-2 flex justify-between items-center">
@@ -663,7 +663,7 @@
         </div>
 
         <div class="relative w-full flex items-end justify-start text-left bg-cover bg-center"
-            style="height: 450px; background-image:url(/images/evenement/IA.jpg);">
+            style="height: 450px; background-image:url(images/evenement/IA.jpg);">
              
             <div class="absolute top-0 right-0 left-0 mx-5 mt-2 flex justify-between items-center">
                 <div class="text-red-950 font-bold flex flex-col justify-start">
@@ -815,7 +815,7 @@
         <a href="#"></a>
         <div class="relative">
           <a href="#">
-            <img class="w-full" src="/images/communique/1.jpg" alt="Sunset in the mountains">
+            <img class="w-full" src="images/communique/1.jpg" alt="Sunset in the mountains">
             <div
               class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
             </div>
@@ -860,7 +860,7 @@
         <a href="#"></a>
         <div class="relative">
           <a href="#">
-            <img class="w-full" src="/images/communique/1.jpg" alt="Sunset in the mountains">
+            <img class="w-full" src="images/communique/1.jpg" alt="Sunset in the mountains">
             <div
               class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
             </div>
@@ -905,7 +905,7 @@
         <a href="#"></a>
         <div class="relative">
           <a href="#">
-            <img class="w-full" src="/images/communique/1.jpg" alt="Sunset in the mountains">
+            <img class="w-full" src="images/communique/1.jpg" alt="Sunset in the mountains">
             <div
               class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
             </div>
@@ -975,10 +975,10 @@
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery"
               class=" w-full h-48 object-cover object-center bg-pink-600 fill-red-800 block inset-0 transform hover:-translate-x-10 transition duration-300"
-              src="/images/evenement/Directed_by_Monsieur_Sky.png">
+              src="images/evenement/Directed_by_Monsieur_Sky.png">
           </div>
           <div class="md:p-2 p-1 w-1/2">
-            <img alt="gallery" class=" w-full h-48 object-cover object-center block " src="/images/1692100157119.jpeg">
+            <img alt="gallery" class=" w-full h-48 object-cover object-center block " src="images/1692100157119.jpeg">
           </div>
         </div>
 
@@ -986,15 +986,15 @@
 
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class=" w-full h-48 object-fill object-center block "
-              src="/images/page-banner-2.jpg">
+              src="images/page-banner-2.jpg">
           </div>
           <div class="md:p-2 p-1 w-1/2">
             <img alt="gallery" class=" w-full h-48 object-cover object-center block "
-              src="/images/background2.webp">
+              src="images/background2.webp">
           </div>
           <div class="md:p-2 p-1 w-full">
             <img alt="gallery" class="w-full h-96 object-cover object-center block"
-              src="/images/blog/b-2.jpg">
+              src="images/blog/b-2.jpg">
 
           </div>
         </div>
