--- a/html/index.html
+++ b/html/index.html
@@ -600,7 +600,7 @@
 
   <!-- evenements -->
 
-  <div class="container mx-auto  lg:px-10 xl-px-10  mb-6">
+  <div class="container mx-auto px-6 mb-10 md:px-12 xl:px-20">
     <p class="capitalize font-bold text-2xl py-8 px-10">evenement du mois</p>
 
     <div class=" px-10 grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-2 gap-5">
