--- a/html/index.html
+++ b/html/index.html
@@ -226,7 +226,7 @@
   <!-- ------PAGE D'ANNONCE---------- -->
 
 
-
+<div class="container mx-auto px-6 mb-10 md:px-12 xl:px-20 pt-10">
   <div id="indicators-carousel" class="relative w-full" data-carousel="static">
     <!-- Carousel wrapper -->
     <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
@@ -277,7 +277,7 @@
         </span>
     </button>
 </div>
-
+</div>
 <!--  -->
  
   <!-- NEws  -->
