modifiy path news
modifiy path news

--- a/html/index.html
+++ b/html/index.html
@@ -216,7 +216,7 @@
 
    
 
-      <div class=" bg-white rounded overflow-hidden shadow-lg">
+      <div class="rounded   shadow-lg">
 
         <a href="#"></a>
         <div class="relative bg-white">
@@ -263,7 +263,7 @@
         </div>
       </div>
 
-      <div class=" bg-white rounded overflow-hidden shadow-lg">
+      <div class=" bg-white rounded   shadow-lg">
 
         <a href="#"></a>
         <div class="relative bg-white">
@@ -310,7 +310,7 @@
         </div>
       </div>
 
-      <div class=" bg-white rounded overflow-hidden shadow-lg">
+      <div class=" bg-white rounded  shadow-lg">
 
         <a href="#"></a>
         <div class="relative bg-white">
@@ -357,7 +357,7 @@
         </div>
       </div>
 
-      <div class=" bg-white rounded overflow-hidden shadow-lg">
+      <div class=" bg-white rounded   shadow-lg">
 
         <a href="#"></a>
         <div class="relative bg-white">
