--- a/html/index.html
+++ b/html/index.html
@@ -221,7 +221,7 @@
         <a href="#"></a>
         <div class="relative bg-white">
           <a href="#" class="">
-            <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
+            <img class="w-full h-50  rounded-lg bg-white" src="images/news/AA.jpg" alt="Sunset in the mountains">
             <div
               class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
             </div>
@@ -269,9 +269,7 @@
         <div class="relative bg-white">
           <a href="#" class="">
             <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-            <div
-              class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
-            </div>
+            
           </a>
           <a href="#!">
             <div
@@ -410,7 +408,7 @@
   <!-- STAT -->
 
   <section class=" text-gray-600 body-font">
-    <div class="container mx-auto px-6 pt-3 mb-10 md:px-12 xl:px-10">
+    <div class="container mx-auto   pt-3 mb-10 md:px-12 xl:px-10">
 
       <div class="grid grid-cols-2 lg:grid-cols-4 -m-4 text-center">
 
@@ -630,7 +628,7 @@
 
             <div class="sm:col-span-6 lg:col-span-4">
 
-              <p class="text-xl font-semibold pb-6 ">divS UTILES</p>
+              <p class="text-xl font-semibold pb-6 ">ACTUALITES UTILES</p>
 
               <div class="flex items-start mb-3 pb-3 ">
                 <a href="#" class="inline-block mr-3">
