--- a/html/index.html
+++ b/html/index.html
@@ -210,197 +210,182 @@
   <!-- ------ACTUALITES---------- -->
 
   <div class="container mx-auto px-6 pt-6 mb-10 md:px-12 xl:px-10">
- <h1 class=" text-2xl font-semibold  uppercase pt-3 text-red-800">Actualités</h1>
+ <h1 class=" text-2xl font-semibold pb-6 uppercase pt-3 text-red-800">Actualités</h1>
 
-    <div class="grid grid-cols-1 xl:grid-cols-4 md:grid-cols-2 pt-8 sm:grid-cols-2 gap-10">
+    <div class="grid grid-cols-1 xl:grid-cols-4 md:grid-cols-2   sm:grid-cols-2 gap-10">
 
    
+        <div class=" bg-white rounded   shadow-lg">
 
-      <div class="rounded   shadow-lg">
+          <a href="#"></a>
+          <div class="relative bg-white">
+            <a href="#" class="">
+              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
 
-        <a href="#"></a>
-        <div class="relative bg-white">
-          <a href="#" class="">
-            <img class="w-full h-50  rounded-lg bg-white" src="images/news/AA.jpg" alt="Sunset in the mountains">
-            <div
-              class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
-            </div>
-          </a>
-          <a href="#!">
-            <div
-              class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-              Univ Camp
-            </div>
-          </a>
+            </a>
+            <a href="#!">
+              <div
+                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
+                Univ Camp
+              </div>
+            </a>
 
 
-        </div>
-        <div class="px-6 py-4">
+          </div>
+          <div class="px-6 py-4">
 
-          <a href="#"
-            class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-            ACCUEIL DES NOUVEAUX ETUDIANTS DU CYCLE DE LICENCE</a>
-          <p class="text-gray-500 text-sm text-justify pt-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-            consequatur in corporis aliquam, quam delectus animi laudantium?...
-          </p>
-        </div>
-        <div class="px-6 py-4 flex flex-row items-center">
-          <span href="#"
-            class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-            <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-              style="enable-background:new 0 0 512 512;" xml:space="preserve">
-              <g>
+            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
+              LA REFORME DU NOUEAU SYSTEME LMD</a>
+            <p class="text-gray-500 text-sm text-justify pt-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
+              consequatur in corporis aliquam, quam delectus animi laudantium?...
+            </p>
+          </div>
+          <div class="px-6 py-4 flex flex-row items-center">
+            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
+              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512;" xml:space="preserve">
                 <g>
-                  <path
-                    d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                  </path>
+                  <g>
+                    <path
+                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
+                    </path>
+                  </g>
                 </g>
-              </g>
-            </svg>
-            <span class="ml-1">6 mins read</span></span>
+              </svg>
+              <span class="ml-1">6 mins read</span></span>
+          </div>
         </div>
-      </div>
 
-      <div class=" bg-white rounded   shadow-lg">
+        <div class=" bg-white rounded   shadow-lg">
 
-        <a href="#"></a>
-        <div class="relative bg-white">
-          <a href="#" class="">
-            <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-            
-          </a>
-          <a href="#!">
-            <div
-              class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-              Univ Camp
-            </div>
-          </a>
+          <a href="#"></a>
+          <div class="relative bg-white">
+            <a href="#" class="">
+              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
+
+            </a>
+            <a href="#!">
+              <div
+                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
+                Univ Camp
+              </div>
+            </a>
 
 
-        </div>
-        <div class="px-6 py-4">
+          </div>
+          <div class="px-6 py-4">
 
-          <a href="#"
-            class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-            LA REFORME DU NOUEAU SYSTEME LMD</a>
-          <p class="text-gray-500 text-sm text-justify pt-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-            consequatur in corporis aliquam, quam delectus animi laudantium?...
-          </p>
-        </div>
-        <div class="px-6 py-4 flex flex-row items-center">
-          <span href="#"
-            class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-            <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-              style="enable-background:new 0 0 512 512;" xml:space="preserve">
-              <g>
+            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
+              LA REFORME DU NOUEAU SYSTEME LMD</a>
+            <p class="text-gray-500 text-sm text-justify pt-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
+              consequatur in corporis aliquam, quam delectus animi laudantium?...
+            </p>
+          </div>
+          <div class="px-6 py-4 flex flex-row items-center">
+            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
+              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512;" xml:space="preserve">
                 <g>
-                  <path
-                    d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                  </path>
+                  <g>
+                    <path
+                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
+                    </path>
+                  </g>
                 </g>
-              </g>
-            </svg>
-            <span class="ml-1">6 mins read</span></span>
+              </svg>
+              <span class="ml-1">6 mins read</span></span>
+          </div>
         </div>
-      </div>
 
-      <div class=" bg-white rounded  shadow-lg">
+        <div class=" bg-white rounded   shadow-lg">
 
-        <a href="#"></a>
-        <div class="relative bg-white">
-          <a href="#" class="">
-            <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-            <div
-              class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
-            </div>
-          </a>
-          <a href="#!">
-            <div
-              class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-              Univ Camp
-            </div>
-          </a>
+          <a href="#"></a>
+          <div class="relative bg-white">
+            <a href="#" class="">
+              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
+
+            </a>
+            <a href="#!">
+              <div
+                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
+                Univ Camp
+              </div>
+            </a>
 
 
-        </div>
-        <div class="px-6 py-4">
+          </div>
+          <div class="px-6 py-4">
 
-          <a href="#"
-            class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-            ACCUEIL DES NOUVEAUX ETUDIANTS DU CYCLE DE LICENCE</a>
-          <p class="text-gray-500 text-sm text-justify pt-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-            consequatur in corporis aliquam, quam delectus animi laudantium?...
-          </p>
-        </div>
-        <div class="px-6 py-4 flex flex-row items-center">
-          <span href="#"
-            class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-            <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-              style="enable-background:new 0 0 512 512;" xml:space="preserve">
-              <g>
+            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
+              LA REFORME DU NOUEAU SYSTEME LMD</a>
+            <p class="text-gray-500 text-sm text-justify pt-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
+              consequatur in corporis aliquam, quam delectus animi laudantium?...
+            </p>
+          </div>
+          <div class="px-6 py-4 flex flex-row items-center">
+            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
+              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512;" xml:space="preserve">
                 <g>
-                  <path
-                    d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                  </path>
+                  <g>
+                    <path
+                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
+                    </path>
+                  </g>
                 </g>
-              </g>
-            </svg>
-            <span class="ml-1">6 mins read</span></span>
+              </svg>
+              <span class="ml-1">6 mins read</span></span>
+          </div>
         </div>
-      </div>
 
-      <div class=" bg-white rounded   shadow-lg">
+        <div class=" bg-white rounded   shadow-lg">
 
-        <a href="#"></a>
-        <div class="relative bg-white">
-          <a href="#" class="">
-            <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-            <div
-              class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
-            </div>
-          </a>
-          <a href="#!">
-            <div
-              class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-              Univ Camp
-            </div>
-          </a>
+          <a href="#"></a>
+          <div class="relative bg-white">
+            <a href="#" class="">
+              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
+
+            </a>
+            <a href="#!">
+              <div
+                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
+                Univ Camp
+              </div>
+            </a>
 
 
-        </div>
-        <div class="px-6 py-4">
+          </div>
+          <div class="px-6 py-4">
 
-          <a href="#"
-            class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-            LA REFORME DU NOUEAU SYSTEME LMD</a>
-          <p class="text-gray-500 text-sm text-justify pt-1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-            consequatur in corporis aliquam, quam delectus animi laudantium?...
-          </p>
-        </div>
-        <div class="px-6 py-4 flex flex-row items-center">
-          <span href="#"
-            class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-            <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-              style="enable-background:new 0 0 512 512;" xml:space="preserve">
-              <g>
+            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
+              LA REFORME DU NOUEAU SYSTEME LMD</a>
+            <p class="text-gray-500 text-sm text-justify pt-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
+              consequatur in corporis aliquam, quam delectus animi laudantium?...
+            </p>
+          </div>
+          <div class="px-6 py-4 flex flex-row items-center">
+            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
+              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512;" xml:space="preserve">
                 <g>
-                  <path
-                    d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                  </path>
+                  <g>
+                    <path
+                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
+                    </path>
+                  </g>
                 </g>
-              </g>
-            </svg>
-            <span class="ml-1">6 mins read</span></span>
+              </svg>
+              <span class="ml-1">6 mins read</span></span>
+          </div>
         </div>
-      </div>
 
     </div>
   </div>
@@ -408,7 +393,7 @@
   <!-- STAT -->
 
   <section class=" text-gray-600 body-font">
-    <div class="container mx-auto   pt-3 mb-10 md:px-12 xl:px-10">
+    <div class="container mx-auto  px-2 pt-3 mb-10 md:px-12 xl:px-10">
 
       <div class="grid grid-cols-2 lg:grid-cols-4 -m-4 text-center">
 
