--- a/html/index.html
+++ b/html/index.html
@@ -625,8 +625,7 @@
                   <p class="text-gray-800 font-semibold text-sm pb-2">08 Janvier 2024</p>
                   <p class="text-gray-600 font-medium hover:text-indigo-600 leading-none"></p>
                   <a href="#" class="text-justify ">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit soluta similique voluptas
-                    explicabo. Commodi?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                   </a>
                 </div>
               </div>
@@ -641,8 +640,7 @@
                   <p class="text-gray-800 font-semibold text-sm pb-2">08 Janvier 2024</p>
                   <p class="text-gray-600 font-medium hover:text-indigo-600 leading-none"></p>
                   <a href="#" class="text-justify ">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit soluta similique voluptas
-                    explicabo. Commodi?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                   </a>
                 </div>
               </div>
@@ -657,8 +655,7 @@
                   <p class="text-gray-800 font-semibold text-sm pb-2">08 Janvier 2024</p>
                   <p class="text-gray-600 font-medium hover:text-indigo-600 leading-none"></p>
                   <a href="#" class="text-justify ">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit soluta similique voluptas
-                    explicabo. Commodi?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                   </a>
                 </div>
               </div>
@@ -673,8 +670,7 @@
                   <p class="text-gray-800 font-semibold text-sm pb-2">08 Janvier 2024</p>
                   <p class="text-gray-600 font-medium hover:text-indigo-600 leading-none"></p>
                   <a href="#" class="text-justify ">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit soluta similique voluptas
-                    explicabo. Commodi?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                   </a>
                 </div>
               </div>
@@ -689,8 +685,7 @@
                   <p class="text-gray-800 font-semibold text-sm pb-2">08 Janvier 2024</p>
                   <p class="text-gray-600 font-medium hover:text-indigo-600 leading-none"></p>
                   <a href="#" class="text-justify ">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit soluta similique voluptas
-                    explicabo. Commodi?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                   </a>
                 </div>
               </div>
@@ -714,8 +709,7 @@
     <h1 class=" text-2xl font-semibold pb-10 uppercase text-red-800">NOS EVENEMENTS</h1>
 
 
-    <div
-      class="  grid grid-cols-1 xl:grid-cols-4 lg:grid-cols-2 md:grid-cols-2 bg-white p-4 shadow-lg  sm:grid-cols-2 gap-5">
+    <div  class="  grid grid-cols-1 xl:grid-cols-4 lg:grid-cols-2 md:grid-cols-2 bg-white p-4 shadow-lg  sm:grid-cols-2 gap-5">
 
       <div class="relative w-full flex items-end justify-start text-left bg-cover bg-center"
         style="height: 450px; background-image:url(images/1692100157119.jpeg);">
