--- a/html/index.html
+++ b/html/index.html
@@ -196,8 +196,7 @@
             Welcom to Our Univ Camp</p>
 
           <p class="mb-8 text-sm font-normal text-gray-100   sm:px-16 xl:px-64 dark:text-gray-400">
-            Here at Flowbite we focus on markets where technology, innovation, and capital can unlock
-            long-term value and drive economic growth.</p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quam,  </p>
 
 
         </div>
