--- a/html/index.html
+++ b/html/index.html
@@ -208,186 +208,72 @@
 
   <!-- ------ACTUALITES---------- -->
 
-  <div class="container mx-auto px-6 pt-6 mb-10 md:px-12 xl:px-10">
- <h1 class=" text-2xl font-semibold pb-6 uppercase pt-3 text-red-800">Actualités</h1>
-
-    <div class="grid grid-cols-1 xl:grid-cols-4 md:grid-cols-2   sm:grid-cols-2 gap-10">
-
-   
-        <div class=" bg-white rounded   shadow-lg">
-
-          <a href="#"></a>
-          <div class="relative bg-white">
-            <a href="#" class="">
-              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-
-            </a>
-            <a href="#!">
-              <div
-                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-                Univ Camp
-              </div>
-            </a>
-
-
+  <section class="">
+    <div class="container mx-auto px-4 mb-10 md:px-12 xl:px-10 bg-white">
+      <div class="space-y-2 text-center">
+        <h2 class="text-3xl font-bold">Partem reprimique an pro</h2>
+        <p class="font-serif text-sm dark:text-gray-400">Qualisque erroribus usu at, duo te agam soluta mucius.</p>
+      </div>
+      <div class="grid grid-cols-1 gap-x-4 gap-y-8 md:grid-cols-2 lg:grid-cols-4">
+        <article class="flex flex-col dark:bg-gray-900">
+          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
+            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?1">
+          </a>
+          <div class="flex flex-col flex-1 p-6">
+            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
+            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
+            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
+            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
+              <span>June 1, 2020</span>
+              <span>2.1K views</span>
+            </div>
           </div>
-          <div class="px-6 py-4">
-
-            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-              LA REFORME DU NOUEAU SYSTEME LMD</a>
-            <p class="text-gray-500 text-sm text-justify pt-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-              consequatur in corporis aliquam, quam delectus animi laudantium?...
-            </p>
+        </article>
+        <article class="flex flex-col dark:bg-gray-900">
+          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
+            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?2">
+          </a>
+          <div class="flex flex-col flex-1 p-6">
+            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
+            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
+            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
+            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
+              <span>June 2, 2020</span>
+              <span>2.2K views</span>
+            </div>
           </div>
-          <div class="px-6 py-4 flex flex-row items-center">
-            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                <g>
-                  <g>
-                    <path
-                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                    </path>
-                  </g>
-                </g>
-              </svg>
-              <span class="ml-1">6 mins read</span></span>
+        </article>
+        <article class="flex flex-col dark:bg-gray-900">
+          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
+            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?3">
+          </a>
+          <div class="flex flex-col flex-1 p-6">
+            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
+            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
+            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
+            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
+              <span>June 3, 2020</span>
+              <span>2.3K views</span>
+            </div>
           </div>
-        </div>
-
-        <div class=" bg-white rounded   shadow-lg">
-
-          <a href="#"></a>
-          <div class="relative bg-white">
-            <a href="#" class="">
-              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-
-            </a>
-            <a href="#!">
-              <div
-                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-                Univ Camp
-              </div>
-            </a>
-
-
+        </article>
+        <article class="flex flex-col dark:bg-gray-900">
+          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
+            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?4">
+          </a>
+          <div class="flex flex-col flex-1 p-6">
+            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
+            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
+            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
+            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
+              <span>June 4, 2020</span>
+              <span>2.4K views</span>
+            </div>
           </div>
-          <div class="px-6 py-4">
-
-            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-              LA REFORME DU NOUEAU SYSTEME LMD</a>
-            <p class="text-gray-500 text-sm text-justify pt-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-              consequatur in corporis aliquam, quam delectus animi laudantium?...
-            </p>
-          </div>
-          <div class="px-6 py-4 flex flex-row items-center">
-            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                <g>
-                  <g>
-                    <path
-                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                    </path>
-                  </g>
-                </g>
-              </svg>
-              <span class="ml-1">6 mins read</span></span>
-          </div>
-        </div>
-
-        <div class=" bg-white rounded   shadow-lg">
-
-          <a href="#"></a>
-          <div class="relative bg-white">
-            <a href="#" class="">
-              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-
-            </a>
-            <a href="#!">
-              <div
-                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-                Univ Camp
-              </div>
-            </a>
-
-
-          </div>
-          <div class="px-6 py-4">
-
-            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-              LA REFORME DU NOUEAU SYSTEME LMD</a>
-            <p class="text-gray-500 text-sm text-justify pt-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-              consequatur in corporis aliquam, quam delectus animi laudantium?...
-            </p>
-          </div>
-          <div class="px-6 py-4 flex flex-row items-center">
-            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                <g>
-                  <g>
-                    <path
-                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                    </path>
-                  </g>
-                </g>
-              </svg>
-              <span class="ml-1">6 mins read</span></span>
-          </div>
-        </div>
-
-        <div class=" bg-white rounded   shadow-lg">
-
-          <a href="#"></a>
-          <div class="relative bg-white">
-            <a href="#" class="">
-              <img class="w-full   rounded-lg bg-white" src="images/communique/1.jpg" alt="Sunset in the mountains">
-
-            </a>
-            <a href="#!">
-              <div
-                class="absolute bottom-0 left-0 bg-blue-800 px-4 py-2 text-white text-sm hover:bg-white hover:text-indigo-600 transition duration-500 font-bold ease-in-out">
-                Univ Camp
-              </div>
-            </a>
-
-
-          </div>
-          <div class="px-6 py-4">
-
-            <a href="#" class="font-semibold text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out">
-              LA REFORME DU NOUEAU SYSTEME LMD</a>
-            <p class="text-gray-500 text-sm text-justify pt-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem iusto numquam cupiditate laboriosam
-              consequatur in corporis aliquam, quam delectus animi laudantium?...
-            </p>
-          </div>
-          <div class="px-6 py-4 flex flex-row items-center">
-            <span href="#" class="py-1 text-sm font-regular text-gray-900 mr-1 flex flex-row justify-between items-center">
-              <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                <g>
-                  <g>
-                    <path
-                      d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-                    </path>
-                  </g>
-                </g>
-              </svg>
-              <span class="ml-1">6 mins read</span></span>
-          </div>
-        </div>
-
+        </article>
+      </div>
     </div>
-  </div>
+  </section>
 
   <!-- STAT -->
 
